# ncs-inter

./: .gitignore  README.md  ncs-inter.yml
.github/workflows/: build_all.yml  build_changed.yml
l1/l1_e1/: sample.yaml
l1/l1_e1_sol/: sample.yaml
l1/l1_e2/: sample.yaml
l1/l1_e2_sol/: sample.yaml
l2/l2_e1/: prj.conf  sample.yaml
l2/l2_e1_sol/: sample.yaml
l2/l2_e2/: prj.conf  sample.yaml
l2/l2_e2_sol/: prj.conf  sample.yaml
l2/l2_e3/: sample.yaml
l2/l2_e3_sol/: sample.yaml
l4/l4_e1/: sample.yaml
l4/l4_e1_sol/: prj.conf  sample.yaml
l4/l4_e2/: sample.yaml
l4/l4_e2_sol/: sample.yaml
l5/l5_e1/: sample.yaml
l5/l5_e1_sol/: sample.yaml
l6/l6_e1/: prj.conf  sample.yaml
l6/l6_e1_sol/: sample.yaml
l6/l6_e2/: prj.conf  sample.yaml
l6/l6_e3/: prj.conf  (+1 more)
lesson2/: readme.md
lesson6/: .gitignore  README.md
lesson7/inter_less7_exer1_solution/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
lesson7/inter_less7_exer1_solution/boards/: nrf52840dk_nrf52840.overlay
lesson7/inter_less7_exer1_solution/custom_bme280_driver/zephyr/: CMakeLists.txt  Kconfig  custom_bme280_driver_spi.c
lesson7/inter_less7_exer1_solution/src/: main.c
v2.9.0-v2.7.0/l7/l7_e1_sol/app/: CMakeLists.txt  Kconfig  prj.conf
v2.9.0-v2.7.0/l7/l7_e1_sol/app/boards/: nrf52840dk_nrf52840.overlay  nrf52dk_nrf52832.overlay  nrf5340dk_nrf5340_cpuapp_ns.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp_ns.overlay  nrf7002dk_nrf5340_cpuapp_ns.overlay  nrf9151dk_nrf9151_ns.overlay  nrf9161dk_nrf9161_ns.overlay
v2.9.0-v2.7.0/l7/l7_e1_sol/app/src/: main.c
(+979 files in other folders)
